Fixed the dumb z-index thing

--- a/sass/title-container.scss
+++ b/sass/title-container.scss
@@ -4,7 +4,7 @@
 
 	.bryhub-site-title {
 		font-size   : 10rem;
-		font-weight : 400;
+		font-weight : 700;
 		text-align  : center;
 		color       : $color_light-text;
 		padding     : 0;
